--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "etna-ui",
   "version": "1.0.0",
-  "description": "",
+  "description": "EtnaUI aims to empower developers and designers to craft swift and accessible digital services using a unified set of UI components, patterns, and templates.",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
